--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=api-service
+server.port=8081
+server.servlet.context-path=/
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
@@ -11,3 +13,7 @@ spring.datasource.password=password
 
 # create and drop table, good for testing, production set to none or comment it
 spring.jpa.hibernate.ddl-auto=create-drop
+
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
