--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=api-service
 server.port=8081
-server.servlet.context-path=/
+server.servlet.context-path=/api
 
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
@@ -10,10 +10,15 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.url=jdbc:postgresql://localhost:5432/crm
 spring.datasource.username=postgres
 spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# create and drop table, good for testing, production set to none or comment it
+# Hibernate Configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
+# Enable Hibernate Validator
+spring.jpa.properties.javax.persistence.validation.mode=auto
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
