update login and create usẻ

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -143,6 +143,10 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+		</dependency>
 
 	</dependencies>
 	<build>
