--- a/admin/package.json
+++ b/admin/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "akitect-admin-crm",
-  "version": "0.0.1",
+  "name": "adminlte-3-react",
+  "version": "0.3.2",
   "private": true,
   "type": "module",
   "scripts": {
@@ -40,7 +40,7 @@
     "@fortawesome/react-fontawesome": "0.2.2",
     "@profabric/react-components": "0.2.5-beta.5",
     "@reduxjs/toolkit": "2.2.5",
-    "firebase": "10.12.1",
+    "axios": "^1.7.3",
     "formik": "2.4.6",
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
