--- a/admin/package.json
+++ b/admin/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "adminlte-3-react",
-  "version": "0.3.2",
+  "name": "crm-react",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier-eslint $PWD/'src/**/*.{js,json}' --write",
