--- a/admin/package.json
+++ b/admin/package.json
@@ -41,18 +41,21 @@
     "@profabric/react-components": "0.2.5-beta.5",
     "@reduxjs/toolkit": "2.2.5",
     "axios": "^1.7.3",
+    "crm-react": "file:",
     "formik": "2.4.6",
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "luxon": "3.4.4",
     "react": "18.3.1",
     "react-bootstrap": "1.6.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "18.3.1",
     "react-ga4": "2.1.0",
     "react-i18next": "14.1.2",
     "react-redux": "9.1.2",
     "react-router-dom": "6.23.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "10.0.5",
     "redux": "5.0.1",
     "redux-logger": "3.0.6",
