--- a/admin/package.json
+++ b/admin/package.json
@@ -50,8 +50,12 @@
     "react-bootstrap": "1.6.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-easy-crop": "^5.0.8",
     "react-ga4": "2.1.0",
     "react-i18next": "14.1.2",
+    "react-image-crop": "^11.0.6",
+    "react-modal": "^3.16.1",
     "react-redux": "9.1.2",
     "react-router-dom": "6.23.1",
     "react-scripts": "5.0.1",
@@ -74,6 +78,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/react-facebook-login": "4.1.11",
+    "@types/react-modal": "^3.16.3",
     "@types/redux-logger": "3.0.13",
     "@types/styled-components": "5.1.34",
     "@vitejs/plugin-react": "4.3.0",
