--- a/admin/package.json
+++ b/admin/package.json
@@ -46,6 +46,9 @@
     "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "luxon": "3.4.4",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^9.6.3",
     "react": "18.3.1",
     "react-bootstrap": "1.6.1",
     "react-datepicker": "^7.3.0",
